# device-storelibrary-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Config  NOTICE  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CMakeFormat.cmake  CPM.cmake  CPPCheck.cmake  ClangFormat.cmake  ClangTidy.cmake  Sanitizers.cmake
include/: crc32.hpp  db.hpp  expected.hpp  fileDb.hpp  fileStream.hpp  filesystem.hpp  kv.hpp  memoryDb.hpp  posixFileSystem.hpp  slices.hpp  stream.hpp
include/aws/store/common/: crc32.hpp  expected.hpp  logging.hpp  slices.hpp  util.hpp
include/aws/store/filesystem/: filesystem.hpp  posixFileSystem.hpp
include/aws/store/kv/: kv.hpp
include/aws/store/stream/: fileStream.hpp  memoryStream.hpp  stream.hpp
include/common/: crc32.hpp  expected.hpp  logging.hpp  slices.hpp  util.hpp
include/filesystem/: filesystem.hpp  posixFileSystem.hpp
include/kv/: kv.hpp
include/stream/: fileStream.hpp  memoryStream.hpp  stream.hpp
source/: fileDb.cpp  fileStream.cpp  kv.cpp  main.cpp  memoryDb.cpp  memoryStream.cpp
source/kv/: kv.cpp
source/stream/: fileSegment.cpp  fileStream.cpp  memoryStream.cpp
src/: main.cpp
src/device-storelibrary-cpp/: .cmake-format  CMakeLists.txt
src/device-storelibrary-cpp/cmake/: ClangFormat.cmake  aws-storeConfig.cmake.in
src/device-storelibrary-cpp/include/aws/store/common/: crc32.hpp  expected.hpp  logging.hpp  slices.hpp
src/device-storelibrary-cpp/include/aws/store/filesystem/: filesystem.hpp
src/device-storelibrary-cpp/include/aws/store/stream/: stream.hpp
src/device-storelibrary-cpp/src/: main.cpp
src/device-storelibrary-cpp/src/stream/: fileSegment.cpp  memoryStream.cpp
src/device-storelibrary-cpp/test/: kv_test.cpp  test_utils.cpp
src/kv/: kv.cpp
src/stream/: fileSegment.cpp  fileStream.cpp  memoryStream.cpp  stream.cpp
test/: CMakeLists.txt  kv_test.cpp  stream_test.cpp  test.cpp  test_utils.cpp  test_utils.hpp
test/test_data/kv/: map1.kv  map2.kv
